@@ -56,18 +56,18 @@
 
 
     <properties>
-        <otp.serialization.version.id>134</otp.serialization.version.id>
+        <otp.serialization.version.id>136</otp.serialization.version.id>
         <!-- Lib versions - keep list sorted on property name -->
         <geotools.version>30.1</geotools.version>
-        <google.dagger.version>2.49</google.dagger.version>
-        <jackson.version>2.16.0</jackson.version>
+        <google.dagger.version>2.50</google.dagger.version>
+        <jackson.version>2.16.1</jackson.version>
         <jersey.version>3.1.5</jersey.version>
         <junit.version>5.10.1</junit.version>
-        <micrometer.version>1.11.5</micrometer.version>
+        <micrometer.version>1.12.1</micrometer.version>
         <netcdf4.version>5.5.3</netcdf4.version>
         <logback.version>1.4.14</logback.version>
-        <lucene.version>9.8.0</lucene.version>
-        <slf4j.version>2.0.10</slf4j.version>
+        <lucene.version>9.9.1</lucene.version>
+        <slf4j.version>2.0.11</slf4j.version>
         <netex-java-model.version>2.0.15</netex-java-model.version>
         <siri-java-model.version>1.26</siri-java-model.version>
         <jaxb-runtime.version>4.0.4</jaxb-runtime.version>
@@ -242,7 +242,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.2.3</version>
+                <version>3.2.5</version>
                 <dependencies>
                     <dependency>
                         <groupId>me.fabriciorby</groupId>
@@ -282,7 +282,6 @@
                         --add-opens java.base/jdk.internal.loader=ALL-UNNAMED
                         --add-opens java.base/jdk.internal.ref=ALL-UNNAMED
                         --add-opens java.base/jdk.internal.util=ALL-UNNAMED
-                        --add-opens java.base/jdk.internal.util.jar=ALL-UNNAMED
                         --add-opens java.base/jdk.internal.module=ALL-UNNAMED
                         --add-opens java.base/sun.net.www.protocol.http=ALL-UNNAMED
                         --add-opens java.base/sun.net.www.protocol.jar=ALL-UNNAMED
@@ -551,20 +550,6 @@
                 <scope>import</scope>
             </dependency>
 
-            <!--
-                this is necessary because async-http-client uses an old netty version that can crash the
-                Java 21 JVM: https://github.com/netty/netty/pull/13640
-
-                when ACH has been upgraded to the (as of now unreleased) version 3, this can be removed again.
-            -->
-            <dependency>
-                <groupId>io.netty</groupId>
-                <artifactId>netty-bom</artifactId>
-                <version>4.1.100.Final</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
         </dependencies>
     </dependencyManagement>
 
@@ -728,7 +713,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>5.8.0</version>
+            <version>5.9.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -842,13 +827,6 @@
             <artifactId>protobuf-java</artifactId>
         </dependency>
 
-        <!-- Asynchronous Websocket-capable client, for message-driven incremental GTFS-RT -->
-        <!-- AsyncHttpClient Websockets need a newer version of Grizzly than Jersey does. -->
-        <dependency>
-            <groupId>org.asynchttpclient</groupId>
-            <artifactId>async-http-client</artifactId>
-            <version>2.12.3</version>
-        </dependency>
         <!-- OBA GTFS loader -->
         <dependency>
             <groupId>org.onebusaway</groupId>
@@ -944,7 +922,7 @@
         <dependency>
             <groupId>ch.poole</groupId>
             <artifactId>OpeningHoursParser</artifactId>
-            <version>0.28.0</version>
+            <version>0.28.1</version>
         </dependency>
 
         <!-- create zip test files-->
